debug layout issue in production

--- a/styles/index.css
+++ b/styles/index.css
@@ -80,6 +80,24 @@
   }
 }
 
+@media (min-width: 768px) {
+  .md\:w-2\/5 {
+    width: 40%;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:w-full {
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:mt-0 {
+    margin-top: 0;
+  }
+}
+
 .pagination {
   margin: 15px auto;
   display: flex;
